fix: houses z-index

--- a/src/components/House/House.module.scss
+++ b/src/components/House/House.module.scss
@@ -45,6 +45,6 @@
     }
 
     span {
-        z-index: 300;
+        z-index: 100;
     }
 }
